Aplicando Bootstrap al proyecto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- MENU CON BOOTSTRAP -->
     <header class="header">
 
-        <nav class="nav navbar navbar-expand-lg ">
+        <nav class="nav navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand logoNav animate__animated animate__flipInX" href="index.html"> <img
                         src="images/logoNav.png" alt="logo"></a>
@@ -28,7 +28,7 @@
 
 
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="menu navbar-nav mb-2 mb-lg-0">
+                    <ul class="menu navbar-nav  mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
@@ -54,7 +54,7 @@
     <!-- Aplicando BOOTSTRAP -->
     <main class="container-fluid">
         <div class="row">
-            <h1 class="h1Main ">Peluqieria Piu Bello</h1>
+            <h1 class="h1Main">Peluqueria Piu Bello</h1>
         </div>
         <div class="row">
             <div class="col-lg-6 col-sm-12">
