--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -8,23 +8,49 @@
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>Piu Bello</title>
 </head>
 
 <body class="body">
-    <!-- FLEXBOX -->
+    <!-- MENU CON BOOTSTRAP -->
     <header class="header">
-        <div class="logoNav animate__animated animate__flipInX">
-            <a href="../index.html"> <img src="../images/logoNav.png" alt="logo"></a>
-        </div>
-        <nav class="nav">
-            <ul class="menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/nosotros.html">Nosotros</a></li>
-                <li class="li--aResaltado"><a href="../pages/turnos.html">Turnos</a></li>
-                <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
-                <li><a href="../pages/misTrabajos.html">Galeria</a></li>
-            </ul>
+
+        <nav class="nav navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand logoNav animate__animated animate__flipInX" href="../index.html"> <img
+                        src="../images/logoNav.png" alt="logo"></a>
+
+                <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon "></span>
+                </button>
+
+
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="menu navbar-nav  mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link li--aResaltado" href="../pages/turnos.html">Turnos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/ubicacion.html">Ubicacion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/misTrabajos.html">Galeria</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -33,84 +59,104 @@
         <h1 class="h1Main">Solicita tu turno</h1>
 
         <br>
-        <form class="form">
-            <fieldset>
-                <legend>
-                    <h2>Solicita tu turno</h2>
-                </legend>
-                <label for="Nombre">Nombre:</label>
-                <input type="text" name="Nombre">
-                <br>
-                <br>
-                <label for="Telefono">Telefono:</label>
-                <input type="text" name="Telefono">
-                <br>
-                <br>
-                <label for="Telefono">Email:</label>
-                <input type="email" name="Email">
-                <br>
-                <br>
-                <label for="Nombre del perro">Nombre del perro:</label>
-                <input type="text" name="Nombre del perro">
-                <br>
-                <br>
-                <label for="comentario">Podes dejar tu comentario acá:</label>
-                <br>
-                <textarea name="comentario" id="" cols="50" rows="10"></textarea>
 
-                <h3>Seleccione un servicio:</h3>
-                <label for="Servicio">Baño</label>
-                <input type="radio" name="Servicio" id="">
-                <label for="Servicio">Baño y Corte</label>
-                <input type="radio" name="Servicio" id="">
-                <label for="Servicio">Corte Higienico</label>
-                <input type="radio" name="Servicio" id="">
-                <br>
-                <h3>Seleccione un día:</h3>
-                <select name="dias">
-                    <option value=""></option>
-                    <option value="Lunes">Lunes</option>
-                    <option value="Martes">Martes</option>
-                    <option value="Miercoles">Miercoles</option>
-                    <option value="Jueves">Jueves</option>
-                    <option value="Viernes">Viernes</option>
-                    <option value="Sabado">Sabado</option>
-                </select>
+        <section class="d-flex justify-content-center mb-5">
+            <div class="card col-sm-8 p-3">
+                <div class="mb-3">
+                    <h4>Reserva tu turno</h4>
+                </div>
+                <div class="mb-2">
+                    <form action="">
+                        <div class="row">
+                            <div class="col mb-2">
+                                <label for="nombre" class="form-label">Nombre</label>
+                                <input type="text" class="form-control" name="nombre" id="nombre"
+                                    placeholder="Ej: Luis">
+                            </div>
+                            <div class="col mb-2">
+                                <label for="apellido" class="form-label">Apellido</label>
+                                <input type="text" class="form-control" name="apellido" id="apellido"
+                                    placeholder="Ej: Amaison">
+                            </div>
+                            <div class="row">
+                            </div>
+                            <div class="col mb-2">
+                                <label for="telefono" class="form-label">Telefono</label>
+                                <input type="number" class="form-control" name="telefono" id="telefono"
+                                    placeholder="Ej: 011-15-1212-1313">
+                            </div>
+                            <div class="col mb-2">
+                                <label for="nombrePerro" class="form-label">Nombre Mascota</label>
+                                <input type="text" class="form-control" name="nombrePerro" id="nombrePerro"
+                                    placeholder="Ej: Manchita">
+                            </div>
+                        </div>
+                        <div class="mb-2">
+                            <label for="aclaraciones" class="form-label">Comentario</label>
+                            <textarea class="form-control" id="aclaraciones" rows="3"
+                                placeholder="Comentanos cualquier cosa que deberiamos saber sobre tu mascota"></textarea>
+                        </div>
+                        <select class="form-select mb-2" aria-label="Default select example">
+                            <option selected>Seleccionar Día</option>
+                            <option value="1">Lunes</option>
+                            <option value="2">Martes</option>
+                            <option value="3">Miercoles</option>
+                            <option value="3">Jueves</option>
+                            <option value="3">Viernes</option>
+                            <option value="3">Sabado</option>
+                        </select>
+                        <select class="form-select mb-2" aria-label="Default select example">
+                            <option selected>Seleccionar Horario</option>
+                            <option value="1">9am</option>
+                            <option value="2">10am</option>
+                            <option value="3">11am</option>
+                            <option value="3">12pm</option>
+                            <option value="3">13pm</option>
+                            <option value="3">15pm</option>
+                            <option value="3">16pm</option>
+                            <option value="3">17pm</option>
+                            <option value="3">18pm</option>
+                        </select>
+                        <div class="row ">
+                            <div class="col form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="corte" id="corte" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">Corte</label>
+                            </div>
+                            <div class="col form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="corteBaño" id="corteBaño"
+                                    value="option2">
+                                <label class="form-check-label" for="inlineRadio2">Corte y Baño</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="corteHigienico" id="corteHigienico"
+                                    value="option2">
+                                <label class="form-check-label" for="inlineRadio2">Corte Higienico</label>
+                            </div>
+                            <div class="col form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="BañoSolo" id="BañoSolo"
+                                    value="option3">
+                                <label class="form-check-label" for="inlineRadio3">Baño solo</label>
+                            </div>
+                        </div>
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-6 mt-4">
+                                <button class="btn btn-primary" type="submit">Reservar</button>
+                            </div>
+                            <div class="col-6 mt-4">
+                                <button class="btn btn-primary" type="reset">Borrar</button>
+                            </div>
+                        </div>
 
-                <h3>Seleccione un horario:</h3>
-                <select name="horario">
-                    <option value=""></option>
-                    <option value="9 AM">9 AM</option>
-                    <option value="10 AM">10 AM</option>
-                    <option value="11 AM">11 AM</option>
-                    <option value="12 PM">12 PM</option>
-                    <option value="13 PM">13 PM</option>
-                    <option value="14 PM">14 PM</option>
-                    <option value="15 PM">15 PM</option>
-                    <option value="16 PM">16 PM</option>
-                    <option value="17 PM">17 PM</option>
-                    <option value="18 PM">18 PM</option>
-                </select>
-                <br>
-                <br>
-                <br>
-                <input type="submit" value="Enviar" />
-                <input type="reset" value="Limpiar" />
-                <br>
-                <br>
-                <br>
-                <br>
+                    </form>
+                </div>
+
+            </div>
 
 
+        </section>
 
-
-
-
-
-
-
-            </fieldset>
-        </form>
     </main>
 
 
@@ -122,6 +168,9 @@
         <img src="../images/twitter.png" alt="logo twitter" height="20" width="20">
         <img src="../images/instagram.png" alt="logo instagram" height="20" width="20">
     </footer>
+
+    <!-- SCRIPT DE BOOTSTRAP -->
+    <script src="../js/bootstrap.js"></script>
 </body>
 
 </html>
