Repositorio donde añadimos bootstrap al proyecto

--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -61,11 +61,11 @@
         <br>
 
         <section class="d-flex justify-content-center mb-5">
-            <div class="card col-sm-8 p-3">
+            <div class="card col-sm-8 p-3 form--fondo">
                 <div class="mb-3">
                     <h4>Reserva tu turno</h4>
                 </div>
-                <div class="mb-2">
+                <div class="mb-2 form--fondo">
                     <form action="">
                         <div class="row">
                             <div class="col mb-2">
@@ -119,23 +119,23 @@
                         </select>
                         <div class="row ">
                             <div class="col form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="corte" id="corte" value="option1">
+                                <input class="form-check-input" type="radio" name="servicio" id="corte" value="option1">
                                 <label class="form-check-label" for="inlineRadio1">Corte</label>
                             </div>
                             <div class="col form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="corteBaño" id="corteBaño"
+                                <input class="form-check-input" type="radio" name="servicio" id="corteBaño"
                                     value="option2">
                                 <label class="form-check-label" for="inlineRadio2">Corte y Baño</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="corteHigienico" id="corteHigienico"
+                                <input class="form-check-input" type="radio" name="servicio" id="corteHigienico"
                                     value="option2">
                                 <label class="form-check-label" for="inlineRadio2">Corte Higienico</label>
                             </div>
                             <div class="col form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="BañoSolo" id="BañoSolo"
+                                <input class="form-check-input" type="radio" name="servicio" id="BañoSolo"
                                     value="option3">
                                 <label class="form-check-label" for="inlineRadio3">Baño solo</label>
                             </div>
