--- a/pages/misTrabajos.html
+++ b/pages/misTrabajos.html
@@ -60,11 +60,11 @@
 
 
 
-        <div class="container">
+        <div class="container mt-5">
             <div class="row">
-                <div class="col-2">
+                <div class="col-1">
                 </div>
-                <div class="col-8">
+                <div class="col-10">
                     <div id="carouselExampleControls" class="carousel slide carousel-dark" data-bs-ride="carousel"
                         widh="600" height="500">
                         <div class="carousel-inner">
@@ -90,7 +90,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-1">
                 </div>
             </div>
         </div>
