--- a/pages/turnos.html
+++ b/pages/turnos.html
@@ -60,8 +60,8 @@
 
         <br>
 
-        <section class="d-flex justify-content-center mb-5">
-            <div class="card col-sm-8 p-3 form--fondo">
+        <section class="d-flex justify-content-center mb-4 ">
+            <div class="card col-sm-8 p-4 form--fondo shadow-lg p-3 mb-5 rounded">
                 <div class="mb-3">
                     <h4>Reserva tu turno</h4>
                 </div>
@@ -142,7 +142,7 @@
                         </div>
                         <div class="row d-flex justify-content-center">
                             <div class="col-6 mt-4">
-                                <button class="btn btn-primary" type="submit">Reservar</button>
+                                <button class="btn btn-primary " type="submit">Reservar</button>
                             </div>
                             <div class="col-6 mt-4">
                                 <button class="btn btn-primary" type="reset">Borrar</button>
