--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -61,14 +61,14 @@
 
 
 
-        <div class="container">
-            <div class="row">
+        <div class="container ">
+            <div class="row ">
                 <div class="col-2">
 
                 </div>
-                <div class="col-8">
+                <div class="col-8 ">
                     <div class="ubicacion">
-                        <iframe class="iframe__ubicacion"
+                        <iframe class="iframe__ubicacion shadow p-3 mb-5 bg-body rounded"
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1444.681241909431!2d1.415875618293189!3d43.59899370192913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebb0fc4549b31%3A0x2dcaaf5333f5fe05!2s75%20Av.%20de%20Grande%20Bretagne%2C%2031300%20Toulouse%2C%20Francia!5e0!3m2!1ses-419!2sar!4v1640729595163!5m2!1ses-419!2sar"
                             width="100%" height="500" allowfullscreen="" loading="lazy">
                         </iframe>
